--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 			                       <div class="toolbar-wrap">
 			                          	<ul class="sl-share-icon">
 											<li class="follow-text"><span>Suivez nous :</span></li>
-											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-											<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+											<li><a href="https://www.facebook.com/danadreamstg"><i class="fa fa-facebook"></i></a></li>
+											<li><a href="https://www.instagram.com/danadreamstg"><i class="fa fa-instagram"></i></a></li>
 											<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-											<li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
+											<li><a href="https://wa.me/92146589"><i class="fa fa-whatsapp"></i></a></li>
 			                          	</ul>
 			                       </div>
 			                   </div>
@@ -225,7 +225,7 @@
 			<!-- Slider Start -->
 			<div class="rs-slider slider-style2">
 				<div class="slider slider-slide-1">
-					<!-- <div class="slider-item">
+					<div class="slider-item">
 						<div class="container custom13">
 							<div class="slider-inner">
 								<div class="slide-bg-layer"></div>
@@ -252,7 +252,7 @@
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
 					<div class="slider-item slide-bg2">
 						<div class="container custom13">
 							<div class="slider-inner">
@@ -281,7 +281,7 @@
 							</div>
 						</div>
 					</div>
-					<!-- <div class="slider-item slide-bg3">
+					<div class="slider-item slide-bg3">
 						<div class="container custom13">
 							<div class="slider-inner">
 								<div class="slide-bg-layer"></div>
@@ -308,7 +308,7 @@
 								</div>
 							</div>
 						</div>
-					</div> -->
+					</div>
 				</div>
 			</div>
 			<!-- Slider End -->
@@ -343,8 +343,8 @@
 			       		            	</div>
 			       		            </div>
 			       		            <ul class="social-info mt-25">
-			       		                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			       		                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			       		                <li><a href="https://www.facebook.com/danadreamstg"><i class="fa fa-facebook"></i></a></li>
+			       		                <li><a href="https://www.instagram.com/danadreamstg"><i class="fa fa-instagram"></i></a></li>
 			       		                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 			       		            </ul>    
 			       		        </div>
@@ -479,7 +479,7 @@
 							<div class="book-item">
 								<div class="read-wrap">
 									<div class="read-img">
-										<a href="#"><img src="assets/images/parashopping.jpg"></a>
+										<a href="#"><img src="assets/images/info5.jpg"></a>
 									</div>
 									<div class="book-content">
 										<span class="sub-tex btn btn-outline-primary btn-sm"><a href="#">plus d'infos</a></span>
@@ -493,7 +493,7 @@
 							<div class="book-item">
 								<div class="read-wrap">
 									<div class="read-img">
-										<a href="#"><img src="assets/images/paraclean.jpg"></a>
+										<a href="#"><img src="assets/images/clean4.jpg"></a>
 									</div>
 									<div class="book-content">
 										<span class="sub-tex btn btn-outline-primary btn-sm"><a href="#">plus d'infos</a></span>
@@ -507,7 +507,7 @@
 							<div class="book-item">
 								<div class="read-wrap">
 									<div class="read-img">
-										<a href="#"><img src="assets/images/parashopping.jpg"></a>
+										<a href="#"><img src="assets/images/shopping.jpg"></a>
 									</div>
 									<div class="book-content">
 										<span class="sub-tex btn btn-outline-primary btn-sm"><a href="#">plus d'infos</a></span>
@@ -521,7 +521,7 @@
 							<div class="book-item">
 								<div class="read-wrap">
 									<div class="read-img">
-										<a href="#"><img src="assets/images/paraclean.jpg"></a>
+										<a href="#"><img src="assets/images/event55.jpg"></a>
 									</div>
 									<div class="book-content">
 										<span class="sub-tex btn btn-outline-primary btn-sm"><a href="#">plus d'infos</a></span>
@@ -861,140 +861,6 @@
 			</div>
 			<!-- Cta End -->
 
-			<!-- NOTRE EQUIPE End -->
-			<div class="rs-team team-style1 bg7 pt-140 pb-140 md-pt-80 md-pb-80 mb--70">				
-				<div class="container custom8">
-					<div class="sec-title mb-60 md-mb-35">
-						<h2 class="title title11 text-center">
-							Rencontrez notre équipe
-						</h2>
-					</div>
-					<div class="row">
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm1.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-				  	  			   		<h5 class="team-name"><a>Nom complet</a></h5>
-				  	  			   		<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm2.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm3.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm4.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm5.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 xl-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm6.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6 sm-mb-30">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm7.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-xl-3 col-md-6">
-							<div class="team-item-wrap">
-								<div class="team-inner-wrap">
-				  			  		<div class="image-wrap">
-										<a>
-											<img src="assets/images/team/tm8.png" alt="Images">
-										</a>
-				  				   </div>
-				  	  			   	<div class="team-content">
-										<h5 class="team-name"><a>Nom complet</a></h5>
-										<span class="testi-title">fonction</span>
-				  	  			   	</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- NOTRE EQUIPE End -->
-
 			<!-- COMMENT NOUS TRAVAILLONS Start -->
 			<div class="rs-process process-style1 pt-125 pb-130 md-pt-75 md-pb-80">
 				<div class="container">
@@ -1254,7 +1120,7 @@
 		    		<div class="row">
 		    			<div class="col-lg-6">
 	    					<div class="sec-title">
-	    						<span class="sub-text sub-text2">Besoin de la meilleure aide pour les entreprises numériques</span>
+	    						<span class="sub-text sub-text2 text-white">Besoin de la meilleure aide pour les entreprises numériques</span>
 	    						<h2 class="title pb-25 white-color">
 	    							<!-- Success defined in a
 	    							different way -->
@@ -1547,10 +1413,10 @@
 						<div class="col-lg-3 md-mb-30">
 							<p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit.ipsum dolor sit amet consectetur adipisicing elit</p>
 							<ul class="footer-social">  
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>                     
-                                <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>                     
+                                <li><a href="https://www.facebook.com/danadreamstg"><i class="fa fa-facebook"></i></a></li>                     
+                                <li><a href="https://wa.me/92146589"><i class="fa fa-whatsapp"></i></a></li>                     
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>                     
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>                     
+                                <li><a href="https://www.instagram.com/danadreamstg"><i class="fa fa-instagram"></i></a></li>                     
                           	</ul>
 						</div>
 						<div class="col-lg-3 pl-110 md-pl-15">
@@ -1580,7 +1446,10 @@
 									</div>
 									<div class="address-text">
 										<div class="text">
-											<a href="tel:0022890034577">(+228) 90034577</a>
+											<a href="tel:0022890034577">(+228) 90034577/</a>
+											<a href="tel:0022890755616">(+228) 90755616</a>
+											<a href="tel:0022896187256">(+228) 96187256/</a>
+											<a href="tel:00330951040807">(+33) 0951040807</a>
 										</div>
 									</div>
 								</div>
