--- a/index.html
+++ b/index.html
@@ -911,52 +911,102 @@
 			</div>
 			<!-- COMMENT NOUS TRAVAILLONS End -->
 
-			<!-- Contact Section End -->
-			<div id="rs-contact" class="rs-contact contact-style1">				
-				<div class="row no-gutters">
-					<div class="col-lg-6 contact-img"></div>
-					<div class="col-lg-6">
-					    <div class="contact-wrap">
-    						<div class="sec-title mb-40">
-    							<h2 class="title pb-20 white-color">
-    								Contactez-nous
-    							</h2>
-    	        				<p class="desc desc2">
-    								Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    							</p>
-    						</div>
-						    <div id="form-messages"></div>
-						    <form id="contact-form" method="post" action="">
-						        <fieldset>
-						            <div class="row">
-						                <div class="col-sm-6 mb-23">
-						                    <input class="from-control" type="text" id="nom" name="nom" placeholder="nom" required>
-						                </div>
-						                <div class="col-sm-6 mb-23">
-						                    <input class="from-control" type="email" id="email" name="email" placeholder="email" required>
-						                </div> 
-						                <div class="col-sm-6 mb-23">
-						                    <input class="from-control" type="text" id="sujet" name="sujet" placeholder="sujet" required>
-						                </div>   
-						                <div class="col-sm-6 mb-23">
-						                    <input class="from-control" type="tel" id="telephone" name="telephone" placeholder="téléphone" required>
-						                </div>
-						                <div class="col-sm-12 mb-23">
-						                    <textarea class="from-control" id="message" name="message" placeholder="écrivez votre message ici" required></textarea>
-						                </div>
-						            </div>
-						            <div class="btn-part">                                            
-						                <div class="form-group mb-0">
-						                    <input class="readon submit submit-yellow1" type="submit" value="Envoyer">
-						                </div>
-						            </div> 
-						        </fieldset>
-						    </form>
-						    <div class="arrow-icons">
-						    	<img src="assets/images/contact/arrow-2.png" alt="Images">
-						    </div> 
-						</div>
-					</div>
+			<!-- Contact Section Start -->
+			<div id="rs-contact" class="rs-contact contact-style9 bg44 pt-140 pb-140 md-pt-80 md-pb-80">				
+				<div class="container">
+	    			<div class="row y-middle">
+	    				<div class="col-lg-7 pr-150 md-pr-15 md-mb-50">
+							<div class="sec-title mb-45">
+			    				<h2 class="title white-color title11 white-subnormal">
+									Contactez-nous pour<br>plus d'informations!
+								</h2>
+								<p class="desc desc2">Lorem ipsum dolor sit amet consectetur adipisicing elit. ipsum dolor sit amet consectetur adipisicing elit</p>
+			    			</div>
+			    			<div class="address-boxstyle1 mb-40">
+			    				<div class="address-item">
+			    					<div class="address-icon">
+			    						<i class="ri-map-pin-line"></i>	
+			    					</div>
+			    					<div class="address-text">
+			    						<span class="label">Adresse</span>
+			    						<span class="des">
+			    							Lomé, Togo
+			    						</span>
+			    					</div>
+			    				</div>
+			    			</div>
+			    			<div class="address-boxstyle1 mb-40">
+			    				<div class="address-item">
+			    					<div class="address-icon">
+			    						<i class="ri-mail-send-line"></i>	
+			    					</div>
+			    					<div class="address-text">
+			    						<span class="label">Email</span>
+			    						<span class="des">
+			    							<a href="mailto:paracontact.tg@gmail.com">paracontact.tg@gmail.com</a>
+			    						</span>
+			    					</div>
+			    				</div>
+			    			</div>
+			    			<div class="address-boxstyle1">
+			    				<div class="address-item">
+			    					<div class="address-icon">
+			    						<i class="ri-phone-line"></i>
+			    					</div>
+			    					<div class="address-text">
+			    						<span class="label">LOCATION</span>
+			    						<span class="des">
+			    							<a href="tel:++0098007804">(+228) 90034577/ (+228) 90755616</a>
+			    						</span>
+			    					</div>
+			    				</div>
+			    			</div>
+	    				</div>
+	    				<div class="col-lg-5">
+						    <div class="contact-wrap">
+						    	<div class="sec-title mb-30">
+						    		<h3 class="title title14 pb-15">Besoin d'aide?</h3>
+						    		<p class="desc desc9">Proactively fashion world-class leadership vis-a-vis enterprise e-services. Great strong leadership.</p>
+						    	</div>
+    						    <div id="form-messages"></div>
+    						    <form id="contact-form" method="post" action="">
+    						        <fieldset>
+    						            <div class="row">
+    						               <div class="col-lg-12 mb-20">
+                   								<span class="wpcf7-form-control-wrap">
+                   									<i class="ri-user-3-line"></i>
+                   									<input class="from-control" type="text" id="nom" name="nom" placeholder="nom" required="">
+                   								</span>
+                   							</div>
+                   							<div class="col-lg-12 mb-20">
+                   								<span class="wpcf7-form-control-wrap">
+                   									<i class="ri-mail-line"></i>
+                   									<input class="from-control" type="text" id="email" name="email" placeholder="Email" required="">
+                   								</span>
+                   							</div>
+                   							<div class="col-lg-12 mb-20">
+                   								<span class="wpcf7-form-control-wrap">
+                   									<i class="ri-phone-fill"></i>
+                   									<input class="from-control" type="text" id="telephone" name="telephone" placeholder="telephone" required="">
+                   								</span>
+                   							</div>
+                   							<div class="col-sm-12 mb-20">
+                   								<span class="wpcf7-form-control-wrap">
+                   									<i class="ri-edit-line"></i>
+						                    		<textarea class="from-control" id="message" name="message" placeholder="laissez un message..." required=""></textarea>
+							                	</span>
+							                </div>
+    						            </div>
+    						            <div class="btn-part">                                            
+    						                <div class="form-group mb-0">
+    						                    <input class="readon submit sent-quore" type="submit" value="envoyer un message">
+    						                </div>
+    						            </div> 
+    						        </fieldset>
+    						    </form> 
+							</div>
+	    				</div>
+	    			</div>
 				</div>
 			</div>
 			<!-- Contact Section End -->
